tests/ui/cast/issue-85586.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-85586.rs:7:9
   |
LL |     let a = [1, 2, 3].iter().sum();
   |         ^
LL |     let b = (a + 1) as usize;
   |             ------- type must be known at this point
   |
help: consider giving `a` an explicit type
   |
LL |     let a: /* Type */ = [1, 2, 3].iter().sum();
   |          ++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
